--- a/style.css
+++ b/style.css
@@ -1,34 +1,11 @@
-*{
-    margin: 0;
-    padding: 0;
+body{
+    background-color: rgb(165, 133, 133);
 }
-.container {
-    width: 80%;
+.a :hover {
+    background-color: #fff;
+    color: black;
 }
-header{
-    height: 250px;
-    display: flex;
-    margin: 200px auto 0px auto;
- 
-}
-header img {
-    margin: auto;
+h2 {
 
-}
-section {
-    display: flex;
-    margin: auto;
-    flex-direction: column;
-
-}
-section p button{ 
-    width: 1000px;
-}
-.small {
-    width: 200px;
-}
-footer {
-   margin-left: 200px;
-   margin-right: 100px;
-   
+    text-decoration: none;
 }
